# tt-zephyr-platforms

./: README.md  VERSION  west.yml
.github/: ci_boards.json
.github/workflows/: auto-rebase.yml  build-containers.yml  build-fw.yml  compliance.yml  docs.yml  hardware-long.yml  hardware-smoke.yml  metal.yml  release.yml  run-unit-tests.yml
app/dmc/: VERSION  prj.conf  sample.yaml  sysbuild.conf
app/dmc_rom_update/: app.overlay
app/smc/: Kconfig.sysbuild  VERSION  pinctrl.overlay  prj.conf  sample.yaml  sysbuild.cmake  sysbuild.conf
cmake/: bootfs_util.cmake
doc/: conf.py  index.rst
doc/architecture/: bootloader.rst  index.rst
doc/release/: migration-guide-19.0.md  migration-guide-19.1.md  migration-guide-19.2.md  release-notes-19.0.md  release-notes-19.1.md  release-notes-19.2.md
drivers/: CMakeLists.txt  Kconfig
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.emul  clock_control_emul.c  clock_control_tt_bh.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.arc_hs  Kconfig.tt_bh  dma_arc_hs.c  dma_tt_bh_noc.c
drivers/flash/: CMakeLists.txt  Kconfig  flash_mspi_nor.c  flash_mspi_nor.h
drivers/sensor/tenstorrent/pvt/: CMakeLists.txt
include/tenstorrent/: bh_arc.h  bh_power.h  msgqueue.h  smc_msg.h  spi_flash_buf.h  tt_smbus_regs.h
lib/tenstorrent/: CMakeLists.txt  Kconfig
scripts/: build-combined-fwbundle.sh  ci-local-setup.yml  dmc_reset.py  get_ttzp_version.py  requirements.txt  set-p300-jtag.py  tt_boot_fs.py  tt_flash_runner.py  tt_fwbundle.py
scripts/ci/: run-e2e.sh  run-smoke.sh  run-stress.sh
zephyr/: module.yml  patches.yml
(+141 files in other folders)
